--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,13 +1,59 @@
-<div class="panel panel-default">
+<div class="page-header">
+  <h1>S'inscrire sur Petsy</h1>
+</div>
 
-  <div class="panel-heading">
-    S'inscrire
+<div class="row">
+
+  <div class="col-md-8">
+
+    <div class="panel panel-default">
+
+      <div class="panel-heading">
+        S'inscrire
+      </div>
+
+      <div class="panel-body">
+
+        <%= form_for @user, html: {class: 'form-horizontal'} do |f| %>
+
+            <div class="form-group">
+              <%= f.label :username, "Nom utilisateur", class: 'col-md-4 control-label'%>
+              <div class="col-md-6">
+                <%= f.text_field :username, class: 'form-control' %>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :email, "Email", class: 'col-md-4 control-label'%>
+              <div class="col-md-6">
+                <%= f.email_field :email, class: 'form-control' %>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :password, "Mot de passe", class: 'col-md-4 control-label'%>
+              <div class="col-md-6">
+                <%= f.password_field :password, class: 'form-control' %>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :password_confirmation, "Confirmer le mot de passe", class: 'col-md-4 control-label'%>
+              <div class="col-md-6">
+                <%= f.password_field :password_confirmation, class: 'form-control' %>
+              </div>
+            </div>
+
+        <% end %>
+
+      </div>
+
+    </div>
+
   </div>
 
-  <div class="panel-body">
-    <%= form_for @user, class: 'form-horizontal' do |f| %>
-      <%= f.text_field :name %>
-    <% end %>
+  <div class="col-md-4">
+    <%= image_tag 'cat.jpg', width: 200 %>
   </div>
 
 </div>
