--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,13 @@
     </div>
 
     <div class="container">
+
+      <% flash.each do |name, msg| %>
+          <div class="alert alert-<%= name %>"><%= msg %></div>
+      <% end %>
+
       <%= yield %>
+
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
