--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -56,7 +56,7 @@
 
             <div class="form-group">
               <div class="col-md-6 col-md-offset-4">
-                <button type="submit" class="btn btn-primary">S'nscrire</button>
+                <button type="submit" class="btn btn-primary">S'inscrire</button>
               </div>
             </div>
 
