Template with form for user connection and creattion Sessions's controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,11 @@
     <div class="navbar navbar-inverse">
       <div class="container">
         <div class="navbar-header">
-          <a href="<% root_path %>" class="navbar-brand">Petsy</a>
+          <a href="<%= root_path %>" class="navbar-brand">Petsy</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="<% new_user_path %>">S'inscrire</a></li>
-          <li><a href="">Se connecter</a></li>
+          <li><a href="<%= new_user_path %>">S'inscrire</a></li>
+          <li><a href="<%= new_session_path %>">Se connecter</a></li>
         </ul>
       </div>
     </div>
