Others operation for the connection

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,12 @@
           <a href="<%= root_path %>" class="navbar-brand">Petsy</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="<%= new_user_path %>">S'inscrire</a></li>
-          <li><a href="<%= new_session_path %>">Se connecter</a></li>
+          <% if current_user %>
+
+          <% else %>
+            <li><a href="<%= new_user_path %>">S'inscrire</a></li>
+            <li><a href="<%= new_session_path %>">Se connecter</a></li>
+          <% end %>
         </ul>
       </div>
     </div>
