Fix bug and system dropdown bootstrap with hover

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1>S'inscrire sur Petsy</h1>
+  <h1>Votre compte Petsy</h1>
 </div>
 
 <div class="row">
@@ -19,7 +19,7 @@
     <div class="panel panel-default">
 
       <div class="panel-heading">
-        S'inscrire
+        Editer votre compte
       </div>
 
       <div class="panel-body">
